공지사항 기능 구현

--- a/Hobee/src/main/webapp/resources/css/admin/adminNoticeDetail.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminNoticeDetail.css
@@ -13,7 +13,7 @@
 .main-header h1 {
     font-size: 26px;
     font-weight: 700;
-    margin-bottom: 25px;
+    margin-bottom: 60px !important;   /* 기존 25px → 40px로 늘리기 */
     color: #333;
 }
 
@@ -24,11 +24,12 @@
     background: #fff;
     width: 100%;
     max-width: 900px;
-    margin: 0 auto;
+    margin: 30px auto;   /* 🔥 추가: 박스를 아래로 내림 */
     padding: 35px;
     border-radius: 14px;
     box-shadow: 0 3px 10px rgba(0,0,0,0.08);
 }
+
 
 .detail-row {
     display: flex;
