--- a/Hobee/src/main/webapp/resources/css/main/main.css
+++ b/Hobee/src/main/webapp/resources/css/main/main.css
@@ -3,7 +3,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Pretendard', sans-serif;
+	font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
 }
 body {
 	background: #f9fafc;
